# traffic-safety-visualizer

./: .gitignore  IDV_demo.ipynb  README.md  app.py  project.ipynb  pyproject.toml  schoolwork_pressure_analysis.ipynb
data/: liikenneonnettomuudet_Helsingissa.csv
