[project]
name = "interactivedatavisualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "streamlit-plotly-events>=0.0.6",
]
